Button fixes and veil background chang in dark mode.

--- a/src/components/EvMessage/EvMessage.scss
+++ b/src/components/EvMessage/EvMessage.scss
@@ -109,6 +109,7 @@
 
         /**
             @todo: I think the issue with bold and tonal buttons could be improved
+            @todo: we need a background inverse for dark and light themes
          */
         .ev-message--actions {
             .ev-button {
