--- a/src/css/themes.scss
+++ b/src/css/themes.scss
@@ -223,7 +223,7 @@
     --background-warning-bold: #FFB26A;
     --background-warning-bold-hovered: #FFCA99;
     --background-warning-bold-pressed: #FFDBBA;
-    --background-veil: #08080F;
+    --background-veil: #0B0B1499;
 
     /* Text */
     --eyebrow-default: #7B829A;
